<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/trip_details"
    android:layout_width="match_parent"
    android:layout_height="650dp"
    android:background="@android:color/white"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


    <TextView
        android:id="@+id/carModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/white_cobalt_textView"
        android:textColor="#2C2C2C"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/licensePlate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="55dp"
        android:fontFamily="@font/roboto_medium"
        android:lineSpacingMultiplier="1.20"
        android:text="@string/licensePlate"
        android:textColor="#2C2C2C"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/callingBtn"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="18dp"
        android:contentDescription="@string/call_button"
        android:src="@drawable/bnt_call"
        android:onClick="call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tariff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="103dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/tariffTextView"
        android:textColor="#999999"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="103dp"
        android:fontFamily="@font/roboto_medium"
        android:paddingEnd="70dp"
        android:text="@string/payment_type_textView"
        android:textColor="#999999"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/chosenTariff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/comfort_textView"
        android:textColor="#2C2C2C"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tariff" />

    <TextView
        android:id="@+id/paymentType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/cash_textView"
        android:textColor="#2C2C2C"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment" />

    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="24dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentType" />

    <TextView
        android:id="@+id/Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_medium"
        android:paddingStart="5dp"
        android:text="@string/dateTextView"
        android:textColor="#999999"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1" />

    <ImageView
        android:id="@+id/startingPinIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="38dp"
        android:src="@drawable/ic_point_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1" />

    <TextView
        android:id="@+id/startingAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto_bold"
        android:maxLines="1"
        android:paddingStart="5dp"
        android:paddingTop="0dp"
        android:paddingEnd="5dp"
        android:text="@string/sampleAddress1"
        android:textColor="#2C2C2C"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1" />

    <ImageView
        android:id="@+id/dotsIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/dots"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startingPinIcon" />

    <ImageView
        android:id="@+id/endingPointIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/ic_point_end"
        android:src="@drawable/ic_point_end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dotsIcon" />

    <TextView
        android:id="@+id/DateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="95dp"
        android:fontFamily="@font/roboto_medium"
        android:paddingStart="5dp"
        android:text="19:00"
        android:textColor="#999999"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1" />

    <TextView
        android:id="@+id/endingAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="115dp"
        android:fontFamily="@font/roboto_bold"
        android:maxLines="1"
        android:paddingStart="5dp"
        android:paddingTop="0dp"
        android:paddingEnd="5dp"
        android:text="@string/sampleAddress2"
        android:textColor="#2C2C2C"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="327dp"
        android:layout_marginRight="24dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/distance_textView"
        android:textColor="#999999"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tripTime" />

    <TextView
        android:id="@+id/tripTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/trip_time_textView"
        android:textColor="#999999"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <TextView
        android:id="@+id/tripTimeID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/duration_textView"
        android:textColor="#2C2C2C"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <TextView
        android:id="@+id/DistanceID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/distance__textView"
        android:textColor="#2C2C2C"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tripTimeID" />

    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="94dp"
        android:layout_marginRight="24dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <TextView
        android:id="@+id/fare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/fee_textView"
        android:textColor="#2C2C2C"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <TextView
        android:id="@+id/fee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/fare_textView"
        android:textColor="#2C2C2C"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fare" />

    <TextView
        android:id="@+id/wFee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/watingFee__textView"
        android:textColor="#2C2C2C"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fare" />

    <TextView
        android:id="@+id/baseFare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/base_fare_textView"
        android:textColor="#999999"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <TextView
        android:id="@+id/rideFee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/ride_fee_textView"
        android:textColor="#999999"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baseFare" />

    <TextView
        android:id="@+id/waitingFee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/waiting_fee_textView"
        android:textColor="#999999"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rideFee"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/rating_textView"
        android:textColor="#999999"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driverName" />

    <View
        android:id="@+id/divider4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="126dp"
        android:layout_marginRight="24dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <Button
        android:id="@+id/expandBtn"
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_marginTop="6dp"
        android:background="#DEDEDE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/driver_avatar"
        android:src="@drawable/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

    <ImageView
        android:id="@+id/star"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="53dp"
        android:contentDescription="@string/star"
        android:src="@drawable/star"
        app:layout_constraintStart_toEndOf="@+id/ratingNumber"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

    <TextView
        android:id="@+id/tripsNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/tripsN_textView"
        android:textColor="#2C2C2C"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

    <TextView
        android:id="@+id/trip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/trips_textView"
        android:textColor="#999999"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tripsNumber"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

    <TextView
        android:id="@+id/driverName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/driverName_textView"
        android:textColor="#2C2C2C"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

    <TextView
        android:id="@+id/ratingNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/ratingNum_textView"
        android:textColor="#2C2C2C"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/rating"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />


</androidx.constraintlayout.widget.ConstraintLayout>
