<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listDetails"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/topView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/startingPointIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_point_start" />

        <TextView
            android:id="@+id/startingAddress"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="100"
            android:fontFamily="@font/roboto_bold"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:paddingTop="0dp"
            android:paddingEnd="5dp"
            android:text="@string/sampleAddress1"
            android:textColor="#2C2C2C"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/dotsIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/dots" />

    <LinearLayout
        android:id="@+id/middleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/endingPointIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_point_end" />

        <TextView
            android:id="@+id/endingAddress"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="100"
            android:fontFamily="@font/roboto_bold"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:paddingTop="0dp"
            android:paddingEnd="5dp"
            android:text="@string/sampleAddress2"
            android:textColor="#2C2C2C"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/calendarIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/calendar" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0"
            android:text="@string/date_textView"
            android:textColor="#8D8C8C"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_weight="0"
            android:text="@string/time_textView"
            android:textColor="#8D8C8C"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0"
            android:gravity="end"
            android:text="@string/price_textView"
            android:textColor="#2C2C2C"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>